move allowed origins to env