@@ -1,6 +1,9 @@
 package no.ntnu.stud.idatt2106.backend.config;
 
+import java.util.Arrays;
 import java.util.List;
+
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -14,6 +17,9 @@ import org.springframework.web.filter.CorsFilter;
 @Configuration
 public class CorsConfig {
 
+  @Value("${cors.allowed-origins:http://localhost:3000,http://localhost:4000}")
+  private String allowedOrigins;
+
   /**
    * Configures CORS settings for the application.
    * This method allows requests from specific origins and methods.
@@ -24,7 +30,11 @@ public class CorsConfig {
   public CorsFilter corsFilter() {
     CorsConfiguration config = new CorsConfiguration();
     config.setAllowCredentials(true);
-    config.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:4000"));
+
+    // Extract allowed origins from the application properties
+    List<String> origins = Arrays.asList(allowedOrigins.split(","));
+    config.setAllowedOrigins(origins);
+
     config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
     config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
 
